package de.uniluebeck.itm.tr.runtime.portalapp.protobuf;

message Envelope {

	required MessageType message_type = 1;

	optional UpstreamMessage upstream_message            = 2;
	optional DownstreamMessage downstream_message        = 3;
	optional Notification notification                   = 4;
	optional RequestStatus requestStatus                 = 5;
	optional SecretReservationKeys secretReservationKeys = 6;
}

enum MessageType {
	UPSTREAM_MESSAGE        = 1;
	DOWNSTREAM_MESSAGE      = 2;
	NOTIFICATION            = 3;
	REQUEST_STATUS          = 4;
	SECRET_RESERVATION_KEYS = 5;
}

message UpstreamMessage {
	required string source_node_urn = 1;
	required string timestamp       = 2;
	required bytes message_bytes    = 3;
}

message DownstreamMessage {
	repeated string target_node_urns = 1;
	required bytes message_bytes     = 2;
}

message Notification {
	optional string nodeUrn   = 1;
	required string timestamp = 2;
	required string msg       = 3;
}

message RequestStatus {

	message Status {
		required string node_urn = 1;
		required int32 value     = 2;
		optional string message  = 3;
	}

	required sint64 request_id = 1;
	repeated Status status     = 2;
}

message SecretReservationKeys {

	message SecretReservationKey {
		required string urn_prefix = 1;
		required string key        = 2;
	}

	repeated SecretReservationKey keys = 1;
}